--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "babel-loader": "^8.1.0",
     "bootstrap": "^4.4.1",
     "react": "^16.13.1",
