--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,4 +1,17 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: products
+#
+#  id          :bigint           not null, primary key
+#  name        :string
+#  description :string
+#  photourl    :string
+#  string      :string
+#  price       :decimal(, )
+#  artist_id   :integer
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#
 
 one:
   name: MyString
