--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-star-ratings": "^2.3.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
@@ -37,5 +36,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "react-alice-carousel": "^1.19.3",
+    "react-star-ratings": "^2.3.0"
+  }
 }
