--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "babel-loader": "^8.1.0",
     "bootstrap": "^4.4.1",
     "react": "^16.13.1",
+    "react-alice-carousel": "^1.19.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "react-star-ratings": "^2.3.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
@@ -36,8 +38,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "react-alice-carousel": "^1.19.3",
-    "react-star-ratings": "^2.3.0"
-  }
+  "devDependencies": {}
 }
