--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-alice-carousel": "^1.19.3",
     "react-dom": "^16.13.1",
+    "react-meta-tags": "^0.7.4",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-star-ratings": "^2.3.0",
